étape 7: header, nav, footer and multiple transclusion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-ui>
-
+  <app-header class="tr-header"></app-header>
+  <app-nav class="tr-nav"></app-nav>
+  <app-footer class="tr-footer"></app-footer>
+  <div class="tr-content">Contenu de ma page</div>
 </app-ui>
