étape 9: Icons components & fontAwesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-ui>
-  <button class="tr-btn">open or close</button>
+  <app-icon-close class="tr-btn"></app-icon-close>
   <app-header class="tr-header"></app-header>
   <app-nav class="tr-nav"></app-nav>
   <app-footer class="tr-footer"></app-footer>
