--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -1,7 +1,10 @@
 <header class="fixed-top">
   <span (click)="toggle()">
-    <ng-content select=".tr-btn"></ng-content>
+    <ng-content *ngIf="open; else elseBlock" select=".tr-icon-open"></ng-content>
   </span>
+    <ng-template #elseBlock>
+      <ng-content select=".tr-icon-close"></ng-content>
+    </ng-template>
   <ng-content select=".tr-header"></ng-content>
 </header>
 <main [ngClass]="{'close-aside' : open}">
