étape 11: ngIf, ng-template & ng-container

--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -1,10 +1,13 @@
 <header class="fixed-top">
   <span (click)="toggle()">
-    <ng-content *ngIf="open; else elseBlock" select=".tr-icon-open"></ng-content>
+    <ng-container *ngIf="open; then thenBlock else elseBlock" select=".tr-icon-open"></ng-container>
   </span>
-    <ng-template #elseBlock>
-      <ng-content select=".tr-icon-close"></ng-content>
-    </ng-template>
+  <ng-template #thenBlock>
+    <ng-content select=".tr-icon-open"></ng-content>
+  </ng-template>
+  <ng-template #elseBlock>
+    <ng-content select=".tr-icon-close"></ng-content>
+  </ng-template>
   <ng-content select=".tr-header"></ng-content>
 </header>
 <main [ngClass]="{'close-aside' : open}">
