étape 12: ui2 & agilité

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-ui>
+<app-ui2>
   <app-icon-close class="tr-icon-close"></app-icon-close>
   <app-icon-nav class="tr-icon-open"></app-icon-nav>
   <app-header class="tr-header"></app-header>
   <app-nav class="tr-nav"></app-nav>
   <app-footer class="tr-footer"></app-footer>
   <div class="tr-content">Contenu de ma page</div>
-</app-ui>
+</app-ui2>
