--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,1 +1,3 @@
-<p>page-list-orders works!</p>
+<app-gabarit-full-width [title]="myTitle">
+  <button (click)="changeTitle()">change title</button>
+</app-gabarit-full-width>
