étape 25: components stupides avec property binding & lifecycle hooks

--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,3 +1,7 @@
-<app-gabarit-full-width [title]="myTitle">
+<app-gabarit-full-width [title]="myTitle" *ngIf="collection">
   <button (click)="changeTitle()">change title</button>
+
+  <app-table-light [collection]='collection' [headers]="headers"></app-table-light>
+  <app-btn></app-btn>
+
 </app-gabarit-full-width>
