étape 26: projection d'un tableau dynamique

--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,7 +1,17 @@
 <app-gabarit-full-width [title]="myTitle" *ngIf="collection">
   <button (click)="changeTitle()">change title</button>
 
-  <app-table-light [collection]='collection' [headers]="headers"></app-table-light>
+  <app-table-light [headers]="headers">
+    <tr *ngFor="let item of collection">
+      <td>{{ item.typePresta }}</td>
+      <td>{{ item.client }}</td>
+      <td>{{ item.nbJours }}</td>
+      <td>{{ item.tjmHt }}</td>
+      <td>Total HT</td>
+      <td>Total TTC</td>
+      <td>{{ item.state }}</td>
+    </tr>
+  </app-table-light>
   <app-btn></app-btn>
 
 </app-gabarit-full-width>
